After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726361 - vaapipostproc deinterlace-mode did not behave as you would expect
vaapipostproc deinterlace-mode did not behave as you would expect
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 720305
 
 
Reported: 2014-03-14 18:22 UTC by Simon Farnsworth
Modified: 2014-06-18 14:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] postproc: Make deinterlace-mode behave as expected (3.28 KB, patch)
2014-03-14 18:23 UTC, Simon Farnsworth
none Details | Review

Description Simon Farnsworth 2014-03-14 18:22:48 UTC
vaapipostproc's deinterlace-mode only behaved as expected when set to disabled or when set to auto and using interlace-mode=mixed sources (such as vaapidecode). force and interlace-mode=interleaved didn't get deinterlaced properly, and a misflagged buffer in interlace-mode=progressive could get deinterlaced unexpectedly.

I'll attach a patch to fix this to behave the same way as deinterlace elements do.
Comment 1 Simon Farnsworth 2014-03-14 18:23:13 UTC
Created attachment 271936 [details] [review]
[PATCH] postproc: Make deinterlace-mode behave as expected


deinterlace-mode didn't behave in the way you'd expect if you have past
experience of the deinterlace element. There were two bugs:

 1. "auto" mode wouldn't deinterlace "interleaved" buffers, only "mixed".
 2. "force" mode wouldn't deinterlace "mixed" buffers flagged as progressive.

Fix these up, and add assertions and error messages to detect cases that
aren't handled.

Signed-off-by: Simon Farnsworth <simon.farnsworth@onelan.co.uk>
---
 gst/vaapi/gstvaapipostproc.c | 28 ++++++++++++++++++----------
 1 file changed, 18 insertions(+), 10 deletions(-)
Comment 2 Gwenole Beauchesne 2014-06-18 13:35:19 UTC
OK, but I will move down the default: clause so that to make some compilers happy.
Comment 3 Gwenole Beauchesne 2014-06-18 14:25:50 UTC
commit 927fd2e1a80018138b2d4ed51f75e43370234f68
Author: Simon Farnsworth <simon.farnsworth@onelan.co.uk>
Date:   Fri Mar 14 17:49:40 2014 +0000

    vaapipostproc: make deinterlace-mode behave as expected.
    
    deinterlace-mode didn't behave in the way you'd expect if you have
    past experience of the deinterlace element. There were two bugs:
    
     1. "auto" mode wouldn't deinterlace "interleaved" buffers, only "mixed".
     2. "force" mode wouldn't deinterlace "mixed" buffers flagged as progressive.
    
    Fix these up, and add assertions and error messages to detect cases that
    aren't handled.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=726361
    
    Signed-off-by: Simon Farnsworth <simon.farnsworth@onelan.co.uk>
    Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>